# plantseg-fractal-tasks

./: .copier-answers.yml  .gitignore  README.md  pyproject.toml  run_import_h5.py
src/plantseg_fractal_tasks/: __FRACTAL_MANIFEST__.json  __init__.py  import_from_plantseg_h5.py  input_models.py  plantseg_workflow.py  utils.py
src/plantseg_fractal_tasks/dev/: create_manifest.py  task_list.py
tests/: __init__.py  test_import_from_plantseg_h5.py  test_thresholding_label_task.py  test_valid_args_schemas.py  test_valid_task_interface.py
